# retirement_planning

./: .gitignore  AGENTS.md  CODE_REVIEW.md  README.md  app.py  ar_investigation.ipynb  backtest_models.py  cash_buffer_analysis.ipynb  comparative_analysis.ipynb  distribution_alignment.ipynb  generate_notebook.py  hello.py  pyproject.toml  requirements.md  retirement_analysis.ipynb  retirement_analysis_debug.py  retirement_plan.py  simulator.py  strategies.py  test_simulator.py
notes/: cash_buffer_findings.md
