[project]
name = "retirement-planning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "statsmodels>=0.14.5",
    "streamlit>=1.51.0",
    "yfinance>=0.2.66",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
